bat.bool1.diff21.Diff21.scala.error
Compilation error:
Diff21:4: error: '(' expected but identifier found.
  if n>=21:
     ^